// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_TITLE_FOR_LINK_X_VAULT" 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
---

# Foo

[Bar](../vault2/bar.md)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_TITLE_FOR_LINK_X_VAULT" 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
---

# Foo

[Bar](bar)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
